# MDUILib

./: README.md
src/: CMakeLists.txt
src/Framework/: CMakeLists.txt
src/Framework/Common/: MDUILibAfx.hpp  main.cpp
src/Framework/Common/Core/: Events.h  Events.hpp  IUnknown.hpp  Object.cpp  Object.hpp
src/Framework/Common/Core/Controls/: BaseControl.cpp  BaseControl.hpp  Button.cpp  Button.hpp  ControlManager.cpp  ControlManager.hpp  IControl.hpp  Label.cpp  Label.hpp  WindowCanvas.cpp  WindowCanvas.hpp
src/Framework/Common/Core/Geometries/: MRect.cpp  MRect.h  MRect.hpp
src/Framework/Common/Core/Graphics/: IRenderSystem.hpp  MColor.cpp  MColor.hpp  MFont.hpp
src/Framework/Common/Core/Layouts/: BaseLayout.cpp  BaseLayout.hpp  HorizontalLayout.cpp  HorizontalLayout.hpp  ILayout.hpp  VerticalLayout.cpp  VerticalLayout.hpp
src/Framework/Common/Core/Resources/: IResourcesManager.hpp
src/Framework/Common/Core/Windows/: BaseWindow.cpp  BaseWindow.hpp  IWindow.hpp  IWindowFactory.hpp
src/Framework/Common/Runtime/: BaseApplication.cpp  BaseApplication.hpp
src/Framework/Common/Utils/: Any.hpp  MDelegate.h  MDelegate.hpp  MString.hpp  Utils.h  Utils.hpp
src/Framework/Interface/: IApplication.hpp  IRuntime.hpp  Interface.hpp
src/WindowXX/: CMakeLists.txt  Utils.hpp  WindowXXApplication.cpp  WindowXXApplication.hpp
src/WindowXX/Graphics/: Win7OrPlusRenderSystem.cpp  Win7OrPlusRenderSystem.hpp
src/WindowXX/Runtime/: WindowXXApplication.cpp  WindowXXApplication.hpp
src/WindowXX/Windows/: Win7OrPlusWindow.cpp  Win7OrPlusWindow.hpp  WinXXWindow.cpp  WinXXWindow.hpp
