PROJECT( MDUILib )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

set( MDUILIB_HOME_DIR ${CMAKE_HOME_DIRECTORY} )
set( MDUILIB_LIB_DIR ${MDUILIB_HOME_DIR}/lib )
set( MDUILIB_BIN_DIR ${MDUILIB_HOME_DIR}/bin )

ADD_SUBDIRECTORY( Framework )
ADD_SUBDIRECTORY( WindowXX )